--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ Comienzas el turno robando dos cartas del mazo hacia tu “mano”, luego puedes
         <p>Creadores:</p>
     <a href="https://wiki.ead.pucv.cl/Antonia_L%C3%B3pez">Antonia Lopez</a><br>
     <a href="https://wiki.ead.pucv.cl/Sebasti%C3%A1n_Perucci">Sebastián Perucci</a><br>
-    <a href="https://wiki.ead.pucv.cl/Vicente_Quezada_Salfate">Vicente Quezada</a>
+    <a href="https://wiki.ead.pucv.cl/Vicente_Quezada_Salfate">Vicente Quezada</a><br>
     <a href="https://wiki.ead.pucv.cl/Josefa_Zamora">Josefa Zamora</a><br>
   
            <div class="info2">
